[gd_scene load_steps=6 format=3 uid="uid://cnehyyvf688qe"]

[ext_resource type="Script" path="res://Scripts/enemy_dark_assassin.gd" id="1_sj0c3"]
[ext_resource type="Texture2D" uid="uid://dn8qkjuhxtum8" path="res://icon.svg" id="2_mfdqg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtqhn"]
size = Vector2(96, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtc5d"]
size = Vector2(112, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pcq3"]
size = Vector2(192, 160)

[node name="DarkAssassin" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_sj0c3")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0.196078, 0.196078, 0.196078, 1)
position = Vector2(7.62939e-06, -48)
scale = Vector2(0.5, 1.25)
texture = ExtResource("2_mfdqg")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-16, -48)
shape = SubResource("RectangleShape2D_gtqhn")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-16, -48)
shape = SubResource("RectangleShape2D_gtc5d")

[node name="ShootingRange" type="Area2D" parent="."]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="ShootingRange"]
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_8pcq3")

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.8147e-06, -48)
scale = Vector2(3.2, 8)

[node name="BlinkMarker" type="Marker2D" parent="."]
position = Vector2(11, -46)

[connection signal="body_entered" from="Hitbox" to="." method="_on_ally_entered_hitbox"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_ally_exited_hitbox"]
[connection signal="body_entered" from="ShootingRange" to="." method="_on_ally_entered_shooting_range"]
[connection signal="body_exited" from="ShootingRange" to="." method="_on_ally_exited_shooting_range"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier" to="." method="_on_visible_on_screen_notifier_screen_exited"]
